# symphony-go

./: .env.example  .gitignore  .golangci.yml  .prettierignore  AGENTS.md  CLAUDE.md  CODEX.md  HUMAN_TASK.md  Makefile  README.md  SPEC.md  docker-compose.yaml  docker-compose.yml  nx.json  package-lock.json  package.json  trivy.yaml
.githooks/: pre-commit
.github/workflows/: primary-stack.yml  security.yml
arpego/: Dockerfile  README.md  WORKFLOW.md  go.mod  go.sum  project.json
arpego/cmd/arpego/: main.go
arpego/internal/agent/: client.go  events.go  protocol.go  runner.go  session.go  session_test.go  tools.go  tools_test.go
arpego/internal/app/: app.go  app_test.go
arpego/internal/config/: config.go  config_test.go  validate.go
arpego/internal/insights/: git.go  git_test.go  provider.go  provider_test.go  service.go  service_test.go  trends.go  trends_test.go  types.go
arpego/internal/logging/: logging.go  logging_test.go
arpego/internal/orchestrator/: dispatch.go  orchestrator.go  orchestrator_test.go  reconcile.go  (+5 more)
docker/: TASKS.compose.yaml  WORKFLOW.compose.md
docker/prometheus/: prometheus.yml
docs/: agent-architecture.md  codex-macos.md  dev-tooling.md  docker-security.md  memory.md  nx.md  openspec.md
docs/human/: README.md
infra/secrets/: crowdsec_lapi_key.example.txt
infra/traefik/: traefik.yaml
libretto/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  project.json
libretto/src/: App.css  App.tsx  index.css
openspec/: config.yaml
scripts/: README.md  project.json  pyproject.toml
(+112 files in other folders)
